# redis-dashboard

./: Cargo.toml  Dockerfile  build.sh
.github/workflows/: release.yml
portal/src/: App.js
src/: main.rs
src/constant/: mod.rs
src/redis/: keys.rs  mod.rs
