[package]
name = "redis-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
chrono = "0.4"
fern = "0.6.1"
lazy_static = "1.4.0"
log = "0.4"
redis = { version = "0.22.1", features = ["cluster"]}
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["full"] }
